fix: update CSP headers to allow Tailwind CDN and fonts

--- a/vercel.json
+++ b/vercel.json
@@ -37,7 +37,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://fullstackphp-sprint5-api.onrender.com;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.bunny.net; connect-src 'self' https://fullstackphp-sprint5-api.onrender.com;"
         }
       ]
     }
