setup vercel configuration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Local Development Environment
 REACT_APP_API_BASE_URL=http://localhost:8000/api/v1
 
-# Production Environment (Vercel uses environment variables directly)
+# Production Environment (Vercel configuration)
+# Set this in Vercel Dashboard → Settings → Environment Variables:
 # REACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com/api/v1
