--- a/.env.docker
+++ b/.env.docker
@@ -1,1 +1,3 @@
-REACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com
+# Configuração para DockerREACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com
+# Este arquivo é usado quando rodando via Docker
+REACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com/api/v1
