--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,32 @@
-# Local Development Environment
-REACT_APP_API_BASE_URL=http://localhost:8000/api/v1
+# ============================================
+# TechSubs Frontend - Environment Variables
+# ============================================
+#
+# This is a TEMPLATE file. Copy it to create your local environment:
+#   cp .env.example .env.local
+#
+# Then edit .env.local with your configuration.
+#
+# ============================================
 
-# Production Environment (Vercel configuration)
-# Set this in Vercel Dashboard → Settings → Environment Variables:
-# REACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com/api/v1
+# API Base URL
+# For local development with API running locally:
+# REACT_APP_API_BASE_URL=http://localhost:8000/api/v1
+#
+# For local development with production API:
+REACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com/api/v1
+
+# ============================================
+# DEPLOYMENT NOTES
+# ============================================
+#
+# VERCEL:
+# - Environment variables are configured in Vercel Dashboard
+# - Go to: Project Settings → Environment Variables
+# - Add: REACT_APP_API_BASE_URL with production API URL
+# - This file is NOT used by Vercel
+#
+# DOCKER:
+# - Uses .env.docker file (not this one)
+#
+# ============================================
