--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,31 @@
 # ============================================
-# TechSubs Frontend - Environment Variables
+# CONFIGURAÇÃO DE AMBIENTE - TECHSUBS FRONTEND
 # ============================================
 #
-# This is a TEMPLATE file. Copy it to create your local environment:
-#   cp .env.example .env.local
+# Este arquivo serve como template para configurar
+# as variáveis de ambiente do projeto.
 #
-# Then edit .env.local with your configuration.
+# INSTRUÇÕES PARA SETUP:
+# 1. Copie este arquivo para .env
+# 2. Configure as variáveis conforme seu ambiente
 #
 # ============================================
 
 # API Base URL
-# For local development with API running locally:
-# REACT_APP_API_BASE_URL=http://localhost:8000/api/v1
-#
-# For local development with production API:
-REACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com/api/v1
+# Para desenvolvimento local com backend Laravel rodando em localhost:8000
+REACT_APP_API_BASE_URL=http://localhost:8000/api/v1
+
+# Para produção, altere para a URL do seu backend em produção
+# REACT_APP_API_BASE_URL=https://sua-api-producao.com/api/v1
 
 # ============================================
-# DEPLOYMENT NOTES
+# ARQUIVOS DE AMBIENTE DISPONÍVEIS:
 # ============================================
 #
-# VERCEL:
-# - Environment variables are configured in Vercel Dashboard
-# - Go to: Project Settings → Environment Variables
-# - Add: REACT_APP_API_BASE_URL with production API URL
-# - This file is NOT used by Vercel
+# .env          - Arquivo principal (copie deste .env.example)
+# .env.local    - Sobrescreve .env para desenvolvimento local específico
+# .env.docker   - Configuração automática para Docker
 #
-# DOCKER:
-# - Uses .env.docker file (not this one)
+# PRIORIDADE: .env.local > .env > .env.example
 #
 # ============================================
