--- a/.env.docker
+++ b/.env.docker
@@ -10,8 +10,8 @@
 #
 # ============================================
 
-# API Base URL for Docker environment
-REACT_APP_API_BASE_URL=https://fullstackphp-sprint5-api.onrender.com/api/v1
+# API Base URL for Docker environment (local backend)
+REACT_APP_API_BASE_URL=http://localhost:8000/api/v1
 
 # ============================================
 # Docker automatically loads this file when:
